Fixed bug where scrollbar would move content to the left when visible.

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
   font-family: 'manrope', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: calc(100vw - 17px);
 }
 
 code {
